// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldHelperText should render correctly 1`] = `
<p
  aria-hidden="true"
  className="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
>
  mock help
</p>
`;

exports[`FormFieldHelperText should render with an error set 1`] = `
<p
  aria-hidden="true"
  className="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
>
  mock error
</p>
`;
